[tool.poetry]
name = "renfe"
version = "0.1.0"
description = ""
authors = ["JorgeRosco <jorge.rosco@cepsa.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
ipykernel = "^6.25.2"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
